# RigidRegistration

./: .gitignore  BuildInput.cbp  CMakeLists.txt  README.md  buildInputMain.cpp  buildinputs.sh
BuildInput/: CMakeLists.txt  CMakeLists_old.txt  buildInputMain.cpp  buildinputs.sh
BuildInput/cmake/: FindGCG_RandomLib.cmake
BuildInput/include/: Random.h  RandomGaussian.h
BuildInput/point_clouds/: 47_bun000_src_down45_deg45_t1_holes0_rad0_noise0_out0.ply  bun000_src_down45_deg45_t0_holes0_rad0_noise0_out0.ply  bun000_src_down45_deg45_t1_holes0_rad0_noise0_out0-source-orig.ply  bun000_src_down45_deg45_t1_holes0_rad0_noise0_out0.ply  bun000_src_down45_deg45_t1_holes0_rad0_noise0_out5.ply  bun000_src_down45_deg45_t1_holes0_rad0_noise5_out0.ply  bun000_src_down45_deg45_t1_holes1_rad0.03_noise0_out0.ply  bun000_src_down45_deg45_t1_holes1_rad0.03_noise5_out5.ply  bun000_src_down45_deg45_t1_holes2_rad0.03_noise1_out5.ply  bun000_tgt_down45_deg0_t0_holes0_rad0_noise0_out0.ply  bun000_tgt_down45_deg0_t0_holes0_rad0_noise0_out5.ply  bun000_tgt_down45_deg0_t0_holes0_rad0_noise5_out0.ply  bun000_tgt_down45_deg0_t0_holes1_rad0.03_noise0_out0.ply  bun000_tgt_down45_deg0_t0_holes1_rad0.03_noise5_out5.ply  bun000_tgt_down45_deg0_t0_holes2_rad0.03_noise1_out5.ply
BuildInput/src/: Random.cpp  RandomVector.cpp
Registration/: CMakeLists.txt  groundtruth.txt  main.cpp
Registration/cmake/: FindOpenCV.cmake  FindVisualizer3D.cmake
Registration/include/: CommandLineParser.h  CustomWindow.h  DirHandler.h  DirUtils.h  Estimators.h  Graphics.h  MethodsBase.h  MethodsData.h  MethodsHandler.h  Point.h  PointCloud.h  RigidRegistration.h  Tensor.h  TensorEstimator.h  pch.h
Registration/src/: CommandLineParser.cpp  CustomWindow.cpp  DirHandler.cpp  DirUtils.cpp  Estimators.cpp  Graphics.cpp  MethodsBase.cpp  MethodsData.cpp  MethodsHandler.cpp  Point.cpp  PointCloud.cpp  Rigidregistration.cpp  Tensor.cpp  TensorEstimator.cpp
include/: Random.h  RandomVector.h  pch.h
src/: Random.cpp  RandomGaussian.cpp
